@@ -1,0 +1,55 @@
+# ps3mediaserver renderer profile for Sony Bluray Disc Players (2010 Bravia Internet Video-enabled models)
+# Refer to PS3.conf for help
+RendererName=Sony Bluray
+RendererIcon=sony_bdp.png
+UserAgentSearch=UPnP/1.0 DLNADOC/1.50
+UserAgentAdditionalHeader=X-AV-Client-Info
+UserAgentAdditionalHeaderSearch=(cn="Sony Corporation"; mn="Blu-ray Disc Player")
+Video=true
+Audio=true
+Image=true
+SeekByTime=false
+TranscodeVideo=MPEGTSAC3
+TranscodeAudio=LPCM
+DefaultVBVBufSize=true
+MuxH264ToMpegTS=false
+MuxDTSToMpeg=false
+WrapDTSIntoPCM=false
+MuxLPCMToMpeg=false
+MaxVideoBitrateMbps=0
+MaxVideoWidth=0
+MaxVideoHeight=0
+H264Level41Limited=true
+#MimeTypesChanges=
+DLNALocalizationRequired=true
+#TranscodeExtensions=
+#StreamExtensions=
+MediaParserV2_ThumbnailGeneration=false
+
+# For Sony Bluray players and Bravia TVs
+ForceJPGThumbnails=true
+# For Sony Bluray players
+ChunkedTransfer=true
+
+# Specs below taken from http://www.sony.co.uk/product/blu-ray-disc-player/bdp-s370#pageType=TechnicalSpecs
+# then fine-tuned by lengthy trial and error since so much of that advertised spec is inaccurate.
+# US models don't support video/divx mime type but European and Canadian models do.
+# Subtitles in mkv files are only displayed if mime type is video/divx.
+# Vob subtitles are not supported.
+# See also http://forum.serviio.org/viewtopic.php?f=11&t=2004 for more DLNA-related info on these players.
+
+MediaInfo=true
+# --- video ---
+Supported = f:mpegps|mpegts	v:mpeg1|mpeg2	a:ac3|dts|lpcm|mpa|mp3	m:video/mpeg 
+Supported = f:mpegts	v:h264|vc1	a:ac3|dts|dtshd|truehd|aac|lpcm|mpa|mp3	m:video/vnd.dlna.mpeg-tts
+Supported = f:mp4|m4v	v:mp4|h264	a:ac3|dts|dtshd|truehd|aac|lpcm|mpa|mp3	m:video/mpeg
+######### NON-US MODELS: CHANGE THE FOLLOWING 2 MIME-TYPES TO m:video/divx
+Supported = f:avi|divx	v:divx|mp4	a:ac3|lpcm|mpa|mp3	m:video/mpeg
+Supported = f:mkv	v:mp4|divx|h264	a:ac3|dts|dtshd|truehd|aac|lpcm|mpa|mp3	m:video/vnd.dlna.mpeg-tts
+# --- audio ---
+Supported = f:wma	n:2	m:audio/mpeg
+Supported = f:mp3	n:2	m:audio/mpeg
+Supported = f:lpcm n:2 s:48000 m:audio/L16
+# --- image ---
+Supported = f:jpg	m:image/jpeg
+
